Fixed placement issue on mobile

--- a/index.css
+++ b/index.css
@@ -75,7 +75,7 @@ button:active {
 @media screen and (max-width: 1200px) {
   #container {
     flex-flow: column;
-    justify-content: space-around;
+    justify-content: flex-start;
   }
   #instructions {
     height: 40vh;
